@@ -153,6 +153,7 @@ extern void CommandAccept( char * ),
     CommandSetDice( char * ),
     CommandSetDisplay( char * ),
     CommandSetEvalCandidates( char * ),
+    CommandSetEvalConsistency( char * ),
     CommandSetEvalPlies( char * ),
     CommandSetEvalReduced ( char * ),
     CommandSetEvalTolerance( char * ),
